3. k8s-scripts-main/k8s-scripts-main/1. create-pod.yml
#This is to create single pod only with no deployment and replica set.
apiVersion: v1
kind: Pod
metadata:
  name: springpeople
spec:
  containers:
  - name: springpeople-container
    image: jocatalin/kubernetes-bootcamp:v1
    ports:
      - containerPort: 8080
