3. k8s-scripts-main/k8s-scripts-main/2. create-deployment.yml
#This is to create a deployment with one pod and will create replica set id. Thus we can create more replicas with it.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springpeople-deployment
spec:
  selector:
    matchLabels:
      app: springpeople
  template:
    metadata:
      labels:
        app: springpeople
    spec:
      containers:
      - name: springpeople-container
        image: nginx
