3. k8s-scripts-main/k8s-scripts-main/3. deployment-replicas.yml
#This is to create replica pods. We use labels to mark that these resources are used for a particaular app/sw etc.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springpeople-deployment-replicaset
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springpeople
  template:
    metadata:
      labels:
        app: springpeople
    spec:
      containers:
      - name: springpeople-container
        image: nginx
